<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/etFullName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/full_name"
            android:padding="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth_click_to_select"
            android:clickable="true"
            android:focusable="false"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="10dp" />

        <RadioGroup
            android:id="@+id/radioGenderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="16sp"
                android:layout_marginStart="20dp"/>

        </RadioGroup>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:lines="5"
            android:gravity="top"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginTop="50dp" />



    </LinearLayout>

</ScrollView>